--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,8 +1,10 @@
 doctype html
 html
     head
-        title Strimer Times
+        title Streamer Times
     body
+        header
+            h1 Fuck
         main
             block content
         footer
