--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,3 @@
 footer.footer
     .footer__icon
-        i.fab fa-youtube
-    span.footer__text &copy; 2020 Streamer Times
+    span.footer__text Streamer Times #{new Date().getFullYear()} &copy;
