--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,8 +4,7 @@ html
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp", crossorigin="anonymous")
         title Streamer Times
     body
-        header
-            h1 Fuck
+        include ../partials/header
         main
             block content
         include ../partials/footer
