--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,3 @@
 footer.footer
     .footer__icon
-    span.footer__text Streamer Times #{new Date().getFullYear()} &copy;
+    span.footer__text #{siteName} #{new Date().getFullYear()} &copy;
