--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,6 +1,7 @@
 header.header
     .header__column
-       i.fas.fa-grin
+        a(href=routes.home)
+           i.fas.fa-grin
     .header__column
         ul
             li
