--- a/views/home.pug
+++ b/views/home.pug
@@ -7,6 +7,6 @@ block content
             +videoBlock({
                 id:item.id,
                 title:item.title,
-                title:item.views,
+                views:item.views,
                 videoFile:item.videoFile
             })
