--- a/views/join.pug
+++ b/views/join.pug
@@ -4,9 +4,9 @@ block content
     .form-container
         //get은 url에 보여서 보안을 위해 post    
         form(action=routes.join, method="post")                            
-            input(type = "text", name="name", placeholder="Full Name")
-            input(type = "email", name="email", placeholder="Email")
-            input(type = "password", name="password", placeholder="password")
-            input(type = "password", name="password2", placeholder="Verify Password")
+            input(type = "text", name="name", placeholder="Full Name",required=true)
+            input(type = "email", name="email", placeholder="Email",required=true)
+            input(type = "password", name="password", placeholder="password",required=true)
+            input(type = "password", name="password2", placeholder="Verify Password",required=true)
             input(type = "submit", value="가입")
         include partials/socialLogin
