--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
     .form-container
         //get은 url에 보여서 보안을 위해 post    
         form(action=routes.login, method="post")                            
-            input(type = "email", name="email", placeholder="Email")
-            input(type = "password", name="password", placeholder="password")
+            input(type = "email", name="email", placeholder="Email",required=true)
+            input(type = "password", name="password", placeholder="Password",required=true)
             input(type = "submit", value="로그인")
         include partials/socialLogin
