--- a/views/search.pug
+++ b/views/search.pug
@@ -3,11 +3,14 @@ include mixins/videoBlock
 
 block content
     .search__header
-        h3 Searching for #{searchingBy}
+        h3 Searching for: #{searchingBy}
     .search__videos
-         each item in videos
+        if videos.length === 0
+            h5 No Videos Found
+        each item in videos
             +videoBlock({
                 title:item.title,
-                title:item.views,
-                videoFile:item.videoFile
+                views:item.views,
+                videoFile:item.videoFile,
+                id:item.id
             })
