--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,3 +1,5 @@
-body {
-    background-color: red;
-}
+@import "config/_variables.scss";
+@import "config/reset.scss";
+@import "main.scss";
+
+@import "partials/header.scss";
