--- a/static/styles.css
+++ b/static/styles.css
@@ -128,11 +128,15 @@ a {
 
 *,
 input {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box; }
 
 input {
   border: none;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box; }
   input:focus, input:active {
     outline: none; }
 
@@ -150,8 +154,7 @@ main {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  min-height: 70vh;
-  margin-left: 3%; }
+  min-height: 70vh; }
 
 .header {
   background-color: #238aea;
@@ -163,7 +166,11 @@ main {
     max-width: 1200px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    align-items: center; }
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
     .header .header__wrapper .header__column i {
       color: white;
       font-size: 40px; }
@@ -173,6 +180,10 @@ main {
     .header .header__wrapper .header__column:last-child {
       justify-self: end; }
     .header .header__wrapper .header__column ul {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
       display: flex;
       color: white;
       font-weight: 600;
@@ -184,10 +195,21 @@ main {
       .header .header__wrapper .header__column form input {
         padding: 7px 10px;
         width: 100%;
-        border-radius: 5px;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
         font-size: 14px;
         color: #444444;
         font-weight: 600; }
+        .header .header__wrapper .header__column form input::-webkit-input-placeholder {
+          font-weight: 300;
+          color: rgba(0, 0, 0, 0.7); }
+        .header .header__wrapper .header__column form input::-moz-placeholder {
+          font-weight: 300;
+          color: rgba(0, 0, 0, 0.7); }
+        .header .header__wrapper .header__column form input::-ms-input-placeholder {
+          font-weight: 300;
+          color: rgba(0, 0, 0, 0.7); }
         .header .header__wrapper .header__column form input::placeholder {
           font-weight: 300;
           color: rgba(0, 0, 0, 0.7); }
