--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,10 @@
 .social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        //|는 태그가 아니고 텍스트라고 알려줌
-        |Continue with Github
+        a(href=routes.gitHub)
+            span
+                i.fab.fa-github
+            //|는 태그가 아니고 텍스트라고 알려줌
+            |Continue with Github
     button.social-login--facebook
         span
             i.fab.fa-facebook
