fixed small error

--- a/static/styles.css
+++ b/static/styles.css
@@ -460,3 +460,5 @@ input[type="submit"] {
     margin-top: 25px; }
     .video-detail__container .video__comments .video__comment-number {
       font-size: 18px; }
+
+/*# sourceMappingURL=styles.css.map*/
