--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,7 @@
 @import "config/reset.scss";
 @import "config/utils.scss";
 @import "main.scss";
+@import "partials/videoRecorder.scss";
 
 @import "partials/header.scss";
 @import "partials/footer.scss";
